# phishing_detection_cnn

./: .flake8  .gitignore  README.md  dvc.yaml  pylintrc  pyproject.toml  requirements.txt  training_params.yaml
.dvc/: config
.github/workflow/: lint.yml
.github/workflows/: lint.yml  test.yml  versioning.yml
checkpoints/: epoch.json
notebooks/: mutamorphic.ipynb
reports/: metrics.json  output.txt
scripts/: create_test_badge.sh
src/: build_features.py  get_data.py  model.py  preprocessing.py  test.py  train.py  utils.py
src/common/: memory.py  timer.py
src/features/: build_features.py
src/models/: model.py
src/utils/: io.py
tests/: test_inference.py  test_memory.py  test_model_specification.py  test_mutamorphic.py  test_nondeterminism.py  test_reproducibility.py
tests/data_features/: test_data_distribution.py  test_dataslice.py  test_nondeterminism.py
tests/fixtures/: fixtures.py
tests/model_development/: test_model_development.py
tests/models/: test_model.py
