[tool.poetry]
name = "phising-detection-cnn"
version = "0.1.0"
description = ""
authors = ["Adit Whorra <aditwhorra@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
kaggle = "^1.6.12"
keras = "^3.3.3"
tensorflow = "^2.16.1"
scikit-learn = "^1.4.2"
pyyaml = "^6.0.1"
seaborn = "^0.13.2"
dvc = "^3.50.1"
dvc-gdrive = "^3.0.1"

ml-lib-remla = "^1.0.0"
pylint = "^3.2.2"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "PACKAGENAME"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    ".", "src",
]
